<resources>
    <string name="app_name">HenCoderPractice-Kotlin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="main">0 首页</string>
    <string name="draw_basal">1.1 绘制基础</string>
    <string name="paint_detail">1.2 Paint 详细</string>
    <string name="draw_text">1.3 绘制文字</string>
    <string name="canvas_help">1.4 绘制辅助</string>
    <string name="canvas_order">1.5 绘制顺序</string>
    <string name="view_property_animator_simple">1.6 属性动画（上手篇）</string>
    <string name="view_property_animator_advanced">1.7 属性动画（进阶篇）</string>

    <string name="custom_layout_process">2.1 布局过程的自定义</string>

    <!-- About -->
    <string name="github">GitHub page…</string>
    <string name="about_title">About</string>
    <string name="intent_chooser">Complete action using</string>
    <string name="about_body"><![CDATA[
<b>HenCoderPractice-Kotlin</b><br>
已完成 2-1

<br><br><b>Author</b><br>
<a href="https://github.com/sfyc23">Github Profile</a>

<br><br><b>Licence</b><br>
BSD 2-Clause License
<br>Copyright (c) 2017, Thunder Bouble All rights reserved.

<br>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

<br>* Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.

<br>* Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.

<br>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
]]>
    </string>


    <!-- Dialog -->
    <string name="dialog_edit_title_hint">Title</string>
    <string name="dialog_edit_title">Edit title</string>
    <string name="CANCEL">Cancel</string>
    <string name="OK">OK</string>


    <!--  HenCoder 1.1 绘制基础 -->
    <string name="title_draw_color">drawColor()</string>
    <string name="title_draw_circle">drawCircle()</string>
    <string name="title_draw_rect">drawRect()</string>
    <string name="title_draw_point">drawPoint()</string>
    <string name="title_draw_oval">drawOval()</string>
    <string name="title_draw_line">drawLine()</string>
    <string name="title_draw_round_rect">drawRoundRect()</string>
    <string name="title_draw_arc">drawArc()</string>
    <string name="title_draw_path">drawPath()</string>
    <string name="title_draw_histogram">直方图</string>
    <string name="title_draw_pie_chart">饼图</string>


    <!--  HenCoder 1.2 Paint 详细 -->
    <string name="title_linear_gradient">LinearGradient</string>
    <string name="title_radial_gradient">RadialGradient</string>
    <string name="title_sweep_gradient">SweepGradient</string>
    <string name="title_bitmap_shader">BitmapShader</string>
    <string name="title_compose_shader">ComposeShader</string>
    <string name="title_lighting_color_filter">LightingColorFilter</string>
    <string name="title_color_matrix_color_filter">ColorMatrixColorFilter</string>
    <string name="title_xfermode">setXfermode()</string>
    <string name="title_stroke_cap">setStrokeCap()</string>
    <string name="title_stroke_join">setStrokeJoin()</string>
    <string name="title_stroke_miter">setStrokeMiter()</string>
    <string name="title_path_effect">setPathEffect()</string>
    <string name="title_shader_layer">setShadowLayer()</string>
    <string name="title_mask_filter">setMaskFilter()</string>
    <string name="title_fill_path">setFillPath()</string>
    <string name="title_text_path">setTextPath()</string>

    <string name="title_draw_text">drawText()</string>
    <string name="title_static_layout">StaticLayout</string>
    <string name="title_set_text_size">setTextSize()</string>
    <string name="title_set_typeface">setTypeface()</string>
    <string name="title_set_fake_bold_text">setFakeBoldText()</string>
    <string name="title_set_strike_thru_text">setStrikeThruText()</string>
    <string name="title_set_underline_text">setUnderlineText()</string>
    <string name="title_set_text_skew_x">setTextSkewX()</string>
    <string name="title_set_text_scale_x">setTextScaleX()</string>
    <string name="title_set_text_align">setTextAlign()</string>
    <string name="title_get_font_spacing">getFontSpacing()</string>
    <string name="title_measure_text">measureText()</string>
    <string name="title_get_text_bounds">getTextBounds()</string>
    <string name="title_get_font_metrics">getFontMetrics()</string>
    <!--<string name="title_fill_path">setFillPath()</string>-->
    <!--<string name="title_text_path">setTextPath()</string>-->


    <string name="title_clip_rect">clipRect()</string>
    <string name="title_clip_path">clipPath()</string>
    <string name="title_translate">translate()</string>
    <string name="title_scale">scale()</string>
    <string name="title_rotate">rotate()</string>
    <string name="title_skew">skew()</string>
    <string name="title_matrix_translate">Matrix.translate()</string>
    <string name="title_matrix_scale">Matrix.scale()</string>
    <string name="title_matrix_rotate">Matrix.rotate()</string>
    <string name="title_matrix_skew">Matrix.skew()</string>
    <string name="title_camera_rotate">Camera.rotateX/Y()</string>
    <string name="title_camera_rotate_fixed">Camera.rotateX/Y() 修正版</string>
    <string name="title_camera_rotate_hitting_face">Camera.rotateX/Y() 糊脸修正</string>
    <string name="title_flipboard">翻页效果</string>

    <string name="title_after_on_draw">onDraw()-后插</string>
    <string name="title_before_on_draw">onDraw()-前插</string>
    <string name="title_on_draw_layout">onDraw()-在 Layout 中</string>
    <string name="title_dispatch_draw">dispatchDraw()</string>
    <string name="title_after_on_draw_foreground">onDrawForeground()-后插</string>
    <string name="title_before_on_draw_foreground">onDrawForeground()-前插</string>
    <string name="title_after_draw">draw()-后插</string>
    <string name="title_before_draw">draw()-前插</string>


    <string name="title_translation">translationX/Y/Z()</string>
    <string name="title_rotation">rotation/X/Y()</string>
    <string name="title_scale_translation">scaleX/Y()</string>
    <string name="title_alpha">alpha()</string>
    <string name="title_multi_properties">ViewPropertyAnimator-多属性</string>
    <string name="title_duration">setDuration()</string>
    <string name="title_interpolator">setInterpolator()</string>
    <string name="title_object_animator">ObjectAnimator</string>
    <string name="duration">Duration</string>
    <string name="ms_with_value">%dms</string>
    <string name="interpolator">Interpolator</string>
    <string name="animate">animate</string>

    <string-array name="interpolators">
        <item>AccelerateDecelerateInterpolator</item>
        <item>LinearInterpolator</item>
        <item>AccelerateInterpolator</item>
        <item>DecelerateInterpolator</item>
        <item>AnticipateInterpolator</item>
        <item>OvershootInterpolator</item>
        <item>AnticipateOvershootInterpolator</item>
        <item>BounceInterpolator</item>
        <item>CycleInterpolator</item>
        <item>PathInterpolator</item>
        <item>FastOutLinearInInterpolator</item>
        <item>FastOutSlowInInterpolator</item>
        <item>LinearOutSlowInInterpolator</item>
    </string-array>

    <!--1.7-->
    <string name="title_argb_evaluator">ArgbEvaluator</string>
    <string name="title_hsv_evaluator">HsvEvaluator</string>
    <string name="title_of_object">ofObject()</string>
    <string name="title_property_values_holder">PropertyValuesHolder</string>
    <string name="title_animator_set">AnimatorSet</string>
    <string name="title_keyframe">PropertyValuesHolder.ofKeyframe()</string>
    <!--1.7-->

    <!--1.8-->
    <string name="title_square_imageview">SquareImageView</string>
    <!--1.8-->

    <string name="hello">Hello HenCoder</string>
    <string name="about_hencoder">HenCoder 是\n针对高级 Android 工程师\n的进阶手册\n旨在突破高手们最基础的技能瓶颈\n结束止步不前的状态，继续快速提升\n内容难度上也许对新手不够友好\n只能说句得罪了\n我个人水平有限\n照顾不到所有人</string>
    <string name="image_size">尺寸：%1$d x %2$d</string>
    <string name="batman">Batman</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
